Move targets list and target hostname verifier to ProxyRequest